fix overflow dropdown-header

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -176,7 +176,6 @@
     min-width: 320px;
     max-width: 1023px;
     min-height: 600px;
-    height: calc(100vh - 92px);
     display: none;
     flex-direction: column;
     position: relative;
